Add reset view buttons for code blocks and Mermaid